--- a/2-auto-styles/app/panel.css
+++ b/2-auto-styles/app/panel.css
@@ -1,6 +1,11 @@
 :host {
   font-family: 'Helvetica Neue', sans-serif;
 }
+h2 {
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: normal;
+}
 .open-link {
   padding: 10px;
   background: #6d7291;
